--- a/index.html
+++ b/index.html
@@ -1,45 +1,33 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>HTML Album Cover</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <div class="wrapper">
-      <div id="front" class="album">
-        <div id="title-box">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
 
-          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
-          <!-- Level 2 'HAPPY' Header -->
+<!-- FRONT -->
 
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
 
-        </div>
-      </div>
 
-      <div id="back" class="album">
+   <h1>HAPPY</h1>
 
-        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+   <h2> DESPICABLE ME 2 </h2>
 
-        <!-- Level 1 'HAPPY' Header -->
+<!-- BACK -->
 
-        <!-- Level 3 'WRITTEN BY...' Header -->
+  <h3>&nbsp;&nbsp; FROM DESPICABLE ME 2 &nbsp;&nbsp;</h3> |
 
-        <!-- pararaph text 'PUBLISHED BY...' -->
+  <h4>HAPPY</h4>
 
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
+  <h5>BY PHARRELL WILLIAMS</h5>
 
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
-        <!-- span text 'COLUMBIARECORDS.COM' -->
-
-        <br>
-
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
-      </div>
-    </div>
-  </body>
+<p>BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.</p>
+<li><a href="PHARRELLWILLIAMS.COM"columbia-logo.png></li>
+<li><a href="COLUMBIARECORDS.COM"sony-logo.png></li>
+ 
+</body>
 </html>
